[package]
name = "juggler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.14", features = ["full"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
num_cpus = "1.15.0"